RESOLVED FIXED129814
Regression: AX: Don't expose role or notifications for invalid menus
https://bugs.webkit.org/show_bug.cgi?id=129814
Summary Regression: AX: Don't expose role or notifications for invalid menus
James Craig
Reported 2014-03-06 12:27:01 PST
AX: Don't expose role or notifications for invalid menus For example, on this page: http://www.usmagazine.com/celebrity-news/news/andrew-garfield-refused-to-present-with-batkid-at-oscars-report-201463 Seems like this could be solved by having WebKit not fire the notification or example the menu role if the menu is invalid. It might be wise to not even expose it as an AXMenu if it's invalid. For example, this menu contains a link child (invalid) and no menu items (invalid). <li class="" role="menu"> <a class="dropdown-toggle" href="#" data-action="flag" data-role="flag" title="Flag as inappropriate"> <i aria-hidden="true" class="icon icon-flag"></i> </a> </li> This appears to be fallout from bug 123133.
Attachments
patch (11.60 KB, patch)
2014-03-18 20:58 PDT, chris fleizach
mario: review+
James Craig
Comment 1 2014-03-06 12:27:09 PST
James Craig
Comment 2 2014-03-06 12:27:56 PST
s/or example the menu role/or expose the menu role/
chris fleizach
Comment 3 2014-03-18 20:58:38 PDT
Mario Sanchez Prada
Comment 4 2014-03-21 11:31:28 PDT
Comment on attachment 227154 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=227154&action=review Lgtm. Please consider those suggestions below before landing > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperBase.mm:121 > + m_object->updateChildrenIfNecessary(); For your consideration before landing: I wonder if you could fold this into updateBackingStore(), so you don't need to call it explicitly here, and other platforms get benefit from that too > LayoutTests/ChangeLog:13 > + * platform/mac/accessibility/table-with-aria-role-expected.txt: You can move this test expectation now to LayoutTests/accessibility, as there should produce the same (platform independent) output now for all the platforms
chris fleizach
Comment 5 2014-03-24 12:24:51 PDT
(In reply to comment #4) > (From update of attachment 227154 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=227154&action=review > > Lgtm. Please consider those suggestions below before landing > > > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperBase.mm:121 > > + m_object->updateChildrenIfNecessary(); > > For your consideration before landing: I wonder if you could fold this into updateBackingStore(), so you don't need to call it explicitly here, and other platforms get benefit from that too > > > LayoutTests/ChangeLog:13 > > + * platform/mac/accessibility/table-with-aria-role-expected.txt: > > You can move this test expectation now to LayoutTests/accessibility, as there should produce the same (platform independent) output now for all the platforms Will do. Thanks!
chris fleizach
Comment 6 2014-03-24 14:27:09 PDT
Note You need to log in before you can comment on or make changes to this bug.