Source/WebCore/accessibility/AccessibilityObject.cpp
@@ -1354,6 +1354,8 @@ void AccessibilityObject::updateBackingStore()
     // Updating the layout may delete this object.
     if (Document* document = this->document())
         document->updateLayoutIgnorePendingStylesheets();
+    
+    updateChildrenIfNecessary();
 }
 #endif
 
